@startuml
hide circle


class TimeSeries


class DynamicsModel
{
    {abstract} +simulateTrajectory(h): TimeSeries
    {abstract} +transformToUniform(h, d): TimeSeries
    {abstract} +getReturnCorrelation(h, d): Matrix
}

DynamicsModel .> TimeSeries


class ArithmeticBrownianMotion
{
    +simulateTrajectory(h): TimeSeries
    +transformToUniform(h, d): TimeSeries
    +getReturnCorrelation(h, d): Matrix
}
ArithmeticBrownianMotion -up--|> DynamicsModel

class CoxIngersollRoss
{
    +simulateTrajectory(h): TimeSeries
    +transformToUniform(h, d): TimeSeries
    +getReturnCorrelation(h, d): Matrix
}

CoxIngersollRoss -up--|> DynamicsModel


class Statistics
{
    {static} +create(testedModel: DynamicsModel, h, d)
    {abstract} +getValue(observations: TimeSeries): Real
    +plotDistribution(models: DynamicsModel[1..*])
    +plotDiscriminatoryCurve(alternativeModel: DynamicsModel)
}

Statistics --> "testedModel" DynamicsModel
Statistics .> TimeSeries


class KolmogorovSmirnovStatistics
{
    +getValue(observations: TimeSeries): Real
}

KolmogorovSmirnovStatistics -down--|> Statistics

class AndersonDarlingStatistics
{
    +getValue(observations: TimeSeries): Real
}

AndersonDarlingStatistics -down--|> Statistics

class LikelihoodRatioStatistics
{
    +getValue(observations: TimeSeries): Real
}

LikelihoodRatioStatistics -down--|> Statistics

@enduml